  - Add Support for "not mask" and "and mask" gates
  - Added support for "gate -list [pattern]" so that users can filter
    the results of the gate -list command
  - Added support for "spectrum -list [pattern]" so that users can filter
    the results of the spectrum -list command
May 27, 2005
  - Added support for a glob like pattern in the switch of the clear, pararmeter
    bind, apply, and pseudo commands.  When a pattern is given after -list, the 
    command returns objects whose name matches the pattern.
May 31, 2005
  - Remove extra copy construction in TreeParameter ThrowIf's.. as that's an 
    enormous performance hit.
June 1, 2005
  - Fix documentation errors in gate command wrt mask gates.

3.1
June 7, 2005
  - Incorporate defect fix in guiintegrate.cc into this version.
June 20, 2005
  - Fix type on Spectrum.h  getAxisMapCount() had been spelled GetAxisMapCout().June 21, 2005
  - Forward port some fixes for tree parameter gui:
    o gui writing tree variables and parameters with "" units doesn't put
      {} for units but leaves it empty.
    o Allow treevariable -set units optional.
June 22, 2005
  - Support for projection spectra.
June 29, 2005
  - Remove need for working fortran compiler.
July 7, 2005
  - Add ia64 adjustments from 3.0 branch
July 27, 2005
  - Fix up some automake incorrectnesses that old versions of AM let slide.
    This is part of an effort to port to Cygwin.
  - Fix up issues with the definition of PAGESIZE in Xamine (Display subdir)
    That make it not build correctly on CYGWIN.
August 16, 2005
  - Add support to scripted readout for caenv1785 adc (primitive).
September 2, 2005
  - Added support for 2d long spectra.
September 22, 2005
  - Fix defect in Gamma 2d increment:  If no valid parameters are left,
    the outer loop limits are very very bad.
  - Forward port the inclusion of bitmask gates 
  - Support dynamic creation of treeparameters.
  - Document treeparameter -create command in online user guide.