@@ -354,3 +354,7 @@ September 22, 2005
   - Forward port the inclusion of bitmask gates 
   - Support dynamic creation of treeparameters.
   - Document treeparameter -create command in online user guide.
+September 30, 2005  - Happy Birthday Ron: 48
+  - Add -listnew to treeparameter command so that new gui can
+    figure out which parameters have been created since program
+    started ... and save them.
